// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders Default 1`] = `
<body>
  <div>
    <a
      class="Link_linkStyle__m4v9430"
      href="#"
    >
      Default Link
    </a>
  </div>
</body>
`;

exports[`Link renders Variants 1`] = `
<body>
  <div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_colored_true__m4v9431"
        href="#"
      >
        Colored Link
      </a>
    </div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_underlined_true__m4v9432"
        href="#"
      >
        Underlined Link
      </a>
    </div>
    <div>
      <a
        class="Link_linkStyle__m4v9430 Link_linkStyle_noHovered_true__m4v9433"
        href="#"
      >
        no hovered Link
      </a>
    </div>
  </div>
</body>
`;
